<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inptIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/inptPrezime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editIme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ime_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inptPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inptIme"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editPrezime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prezime_hint" />


    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/inptPrezime"/>

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datum"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/rodenje"
        app:layout_constraintBottom_toBottomOf="@id/rodenje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rodenje"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rodenje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editRodenje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datum_hint" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/rodenje"/>

</android.support.constraint.ConstraintLayout>